k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-game-service
spec:
  selector:
    app: pokemon-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
